<resources>
    <string name="app_name">Movie DB</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_category">Pupular</string>
    <string name="nav_genres">Genres</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_about_app">Application</string>
    <string name="text_loading">Loading...</string>
    <string name="overview">As Scott Lang awaits expiration of his term of house detention,
        Hope van Dyne and Dr. Hank Pym involve him in a scheme to rescue Mrs. van Dyne from
        the micro-universe into which she has fallen, while two groups of schemers converge
        on them with intentions of stealing Dr. Pym\'s inventions.</string>
    <string name="like">Like</string>
    <string name="about_actors">Cast</string>
    <string name="time">180</string>
    <string name="title_trailer">Trailer: </string>
    <string name="release_date">Release date:</string>
    <string name="text_load_movie_fail">Loading video fail</string>
    <string name="msg_end_list">Reach end</string>
    <string name="home">Home</string>
    <string name="msg_loading_fail">Error</string>
    <string name="msg_delete_favorite">Do you want to delete this movie from favorites</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="text_actor_job">Job: Actor</string>
    <string name="text_actor_department">Department: Acting</string>
    <string name="title_known_for">Known for:</string>
    <string name="liked">LIKED</string>
    <string name="msg_no_movie_match">No movie match!</string>
    <string name="msg_no_internet">No internet connection</string>
    <string name="msg_confirm_delete">Confirm!</string>
    <string name="add_favorite">Add into favorites</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="msg_update_list_failue">Update fail. Please try again!</string>
    <string-array name="genres">
        <item>28_Action</item>
        <item>12_Adventure</item>
        <item>16_Animation</item>
        <item>35_Comedy</item>
        <item>80_Crime</item>
        <item>99_Documentary</item>
        <item>18_Drama</item>
        <item>10751_Family</item>
        <item>14_Fantasy</item>
        <item>36_History</item>
        <item>27_Horror</item>
        <item>10402_Music</item>
        <item>9648_Mystery</item>
        <item>10749_Romance</item>
        <item>878_Science Fiction</item>
        <item>10770_TV Movie</item>
        <item>53_Thriller</item>
        <item>10752_War</item>
        <item>37_Western</item>
    </string-array>
</resources>
