<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/image_movie_detail"
        android:layout_width="@dimen/image_movie_width_detail"
        android:layout_height="@dimen/image_movie_height_detail"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_150"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_name_movie_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_190"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/app_name"
        android:textColor="@color/color_orange_peel_star"
        android:textSize="@dimen/text_name_movie_detail"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rating_movie_detail"
        app:layout_constraintEnd_toEndOf="@+id/rating_movie_detail"
        app:layout_constraintStart_toStartOf="@+id/rating_movie_detail"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title_name_genres_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/nav_genres"
        android:textColor="@color/color_white_text"
        android:textSize="@dimen/text_genre_movie_detail"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/text_title_time_detail"
        app:layout_constraintTop_toBottomOf="@+id/text_title_time_detail" />

    <TextView
        android:id="@+id/text_name_genres_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/nav_genres"
        android:textColor="@color/color_white_text"
        android:textSize="@dimen/text_genre_movie_detail"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/text_title_name_genres_detail"
        app:layout_constraintTop_toTopOf="@+id/text_title_name_genres_detail" />

    <TextView
        android:id="@+id/text_title_time_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/release_date"
        android:textColor="@color/color_white_text"
        android:textSize="@dimen/text_genre_movie_detail"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/image_movie_detail"
        app:layout_constraintTop_toBottomOf="@+id/rating_movie_detail" />

    <TextView
        android:id="@+id/text_time_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/time"
        android:textColor="@color/color_white_text"
        android:textSize="@dimen/text_genre_movie_detail"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/text_title_time_detail"
        app:layout_constraintTop_toTopOf="@+id/text_title_time_detail" />

    <RatingBar
        android:id="@+id/rating_movie_detail"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:numStars="10"
        android:progressTint="@color/color_orange_peel_star"
        android:rating="9.5"
        android:scaleX=".7"
        android:scaleY=".7"
        android:secondaryProgressTint="@color/color_white_text"
        android:stepSize="0.1"
        android:transformPivotX="@dimen/item_movie_rating_bar_transform_pivot_x"
        android:transformPivotY="@dimen/item_movie_rating_bar_transform_pivot_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_title_time_detail"
        app:layout_constraintTop_toBottomOf="@+id/text_name_movie_detail" />

    <Button
        android:id="@+id/button_like"
        android:layout_width="@dimen/button_cast_width"
        android:layout_height="@dimen/button_cast_height"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@drawable/border_button"
        android:text="@string/like"
        android:textColor="@color/color_white_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_name_genres_detail" />

    <Button
        android:id="@+id/button_cast_detail"
        android:layout_width="@dimen/button_cast_width"
        android:layout_height="@dimen/button_cast_height"
        android:background="@drawable/border_button"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/about_actors"
        android:textColor="@color/color_white_text"
        app:layout_constraintStart_toEndOf="@+id/button_like"
        app:layout_constraintTop_toTopOf="@+id/button_like" />

    <TextView
        android:id="@+id/text_overview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_8"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/overview"
        android:textColor="@color/color_white_text"
        android:textSize="@dimen/text_overview_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_like" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/title_trailer"
        android:textColor="@color/color_white_text"
        android:textSize="@dimen/text_trailer"
        app:layout_constraintStart_toStartOf="@+id/text_overview"
        app:layout_constraintTop_toBottomOf="@+id/text_overview" />

    <fragment
        android:id="@+id/youtube_player_view"
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
        android:layout_width="match_parent"
        android:layout_height="@dimen/youtube_height"
        android:layout_marginEnd="@dimen/dp_4"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</android.support.constraint.ConstraintLayout>
