<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_tolopea_primary">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image_profile_actor_detail"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        app:civ_border_color="#ffffff"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/text_name_actor_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/color_white_text"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_profile_actor_detail"
        app:layout_constraintTop_toBottomOf="@+id/background" />

    <TextView
        android:id="@+id/text_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_actor_job"
        android:textColor="@color/color_white_text"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/text_name_actor_detail"
        app:layout_constraintTop_toBottomOf="@+id/text_name_actor_detail" />

    <TextView
        android:id="@+id/text_department"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_actor_department"
        android:textColor="@color/color_white_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/text_name_actor_detail"
        app:layout_constraintTop_toBottomOf="@+id/text_job" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/recycler_actor_movie"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/dp_8"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/title_known_for"
        android:textColor="@color/color_white_text"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile_actor_detail" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_actor_movie"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</android.support.constraint.ConstraintLayout>